# cosmic-panel

./: Cargo.toml  justfile
cosmic-panel-bin/src/space/: wrapper_space.rs
cosmic-panel-config/: Cargo.toml
cosmic-panel-config/src/: container_config.rs  lib.rs  panel_config.rs
xdg-shell-wrapper-config/: Cargo.toml
xdg-shell-wrapper-config/src/: lib.rs
